--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,9 @@
         "workbench.iconTheme": "material-icon-theme",
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "esbenp.prettier-vscode",
-        "editor.codeActionsOnSave": { "source.fixAll.eslint": true },
+        "editor.codeActionsOnSave": {
+          "source.fixAll.eslint": true
+        },
         "eslint.validate": [
           "javascript",
           "javascriptreact",
