--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "eslint-plugin-tailwindcss": "^3.18.2",
     "live-server": "^1.2.2",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.47",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^4.1.12"
+  },
+  "dependencies": {
+    "@tailwindcss/postcss": "^4.1.12"
   }
 }
