--- a/package.json
+++ b/package.json
@@ -1,29 +1,18 @@
 {
   "name": "web-s01-html-tailwind",
-  "version": "1.0.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "lint": "eslint . --ext .js,.cjs,.mjs,.ts,.vue,.jsx,.tsx",
-    "lint:fix": "npm run lint -- --fix",
-    "format": "prettier . --write",
-    "dev:css": "tailwindcss -i ./src/main.css -o ./src/styles.css --watch",
-    "serve": "live-server src --port=3000 --no-browser --wait=200",
-    "start": "npm-run-all -p dev:css serve",
-    "build": "rm -rf dist && mkdir -p dist && cp -r src/* dist/ && tailwindcss -i ./src/main.css -o ./dist/styles.css --minify"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "eslint": "^9.33.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-tailwindcss": "^3.18.2",
-    "live-server": "^1.2.2",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^4.1.12"
+    "vite": "^7.1.2"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.12"
+    "@tailwindcss/vite": "^4.1.12",
+    "tailwindcss": "^4.1.12"
   }
 }
